5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1595_2049.log
== TEST (2019-03-26 16:39:48) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:21) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- OUTPUT:
1.6
0.0
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:24) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.149893
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
3.0
1.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
86.0
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:26) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.200749
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
3.0
1.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
86.0
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:27) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.103954
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
3.0
1.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:27) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.162702
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
86.0
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:28) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.175569
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:28) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.160084
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:28) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.187565
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2049/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:28) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.223212
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2049/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:29) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.236213
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
7.0
3.0
1.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
173.5
86.0
1.5
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:29) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.20746
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
7.0
3.0
1.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
173.5
86.0
1.5
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:29) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.280065
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2049/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:29) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.283551
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
7.0
3.0
1.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:29) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.232423
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
7.0
3.0
1.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:30) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.328839
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
173.5
86.0
1.5
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:30) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.189665
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
7.0
3.0
1.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:30) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.268547
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
173.5
86.0
1.5
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:31) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.194688
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
7.0
3.0
1.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:31) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.378778
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:31) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.186711
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
86.0
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:31) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.401333
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
xy7.0
3.0
1.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:31) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.268194
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
173.5
86.0
1.5
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:32) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.19946
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:32) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.157871
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:32) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.153079
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:33) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.243899
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
173.5
86.0
1.5
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
86.0
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:33) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.208885
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
7.0
3.0
1.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1.6
0.0
1.6
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
1.6
0.0
1.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:33) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.202356
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
0.0
1.6
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
7.0
3.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:33) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = c//2
e = c%2
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.173334
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/2049/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:40) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = a//b
e = a%c
print(c)
print(d)
print(e)
-- OUTPUT:
1.6
1
1.5999999999999996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:42:43) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = a//b
e = a%c
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.224566
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
1
1.5999999999999996
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
7
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
173
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:42:44) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
c = a/b
d = a//b
e = a%c
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.104508
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
1
1.5999999999999996
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
7
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
173
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:42:54) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
d = a//b
e = a%c

print(d)
print(e)
-- EXECUTION TIME:
0.174788
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2049/main.py", line 4, in <module>
    e = a%c
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:42:55) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
d = a//b
e = a%c

print(d)
print(e)
-- EXECUTION TIME:
0.142823
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2049/main.py", line 4, in <module>
    e = a%c
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:55) 
-- CODE:
a = int(input("x"))
b = int(input("y"))
d = a//b
e = a%c

print(d)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = a%c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:43:25) 
-- CODE:
a = int(input())
b = int(input())
c = a/b
d = a//b
e = a%b
print(c)
print(d)
print(e)
-- EXECUTION TIME:
0.183539
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:43:40) 
-- CODE:
a = int(input())
b = int(input())
d = a//b
e = a%b
print(d)
print(e)
-- EXECUTION TIME:
0.135974
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:43:41) 
-- CODE:
a = int(input())
b = int(input())
d = a//b
e = a%b
print(d)
print(e)
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:43:41) 
-- CODE:
a = int(input())
b = int(input())
d = a//b
e = a%b
print(d)
print(e)
-- EXECUTION TIME:
0.273256
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1
3
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:43:41) 
-- CODE:
a = int(input())
b = int(input())
d = a//b
e = a%b
print(d)
print(e)
-- EXECUTION TIME:
0.135063
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
1
3
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
7
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:43:42) 
-- CODE:
a = int(input())
b = int(input())
d = a//b
e = a%b
print(d)
print(e)
-- EXECUTION TIME:
0.237941
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
173
1
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:44:02) 
-- CODE:
a = int(input())
b = int(input())
d = a//b
e = a%b
print(a)
print(b)

print(d)
print(e)
-- EXECUTION TIME:
0.183854
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
